--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,6 +11,11 @@ rules:
   indent:
     - error
     - 2
+    - VariableDeclarator:
+        var: 2
+        let: 2
+        const: 3
+      ArrayExpression: first
   linebreak-style:
     - error
     - unix
