--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "license": "CC0-1.0",
   "private": false,
   "scripts": {
+    "build": "rollup -c",
+    "lint": "eslint",
+    "lintall": "find src/ -name '*.js' | xargs eslint",
     "liverebuild": "rollup -c --watch",
     "serve": "lite-server -c lite-server.config.json",
     "test": "echo 'Error: no test specified' && exit 1",
     "watch": "npm-run-all --parallel liverebuild serve"
   },
   "dependencies": {
+    "css-element-queries": "^1.0.2",
     "debug": "^4.0.1",
     "jquery": "^3.3.1",
     "knockout": "^3.4.2",
