--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint-watch": "find src/ -name '*.js' | entr yarn run lint-all",
     "live-rebuild": "rollup -c --watch",
     "production": "test -n \"$BUMPPO_VERSION\" && BUMPPO_ENV=production rollup -c || echo $'\\n\\nЗадайте переменную окружения BUMPPO_VERSION\\n'",
-    "rsync": "test -n \"$BUMPPO_VERSION\" && rsync -av build/ ../bumppo-ghpages/$BUMPPO_VERSION || echo $'\\n\\nЗадайте переменную окружения BUMPPO_VERSION\\n'",
+    "rsync": "test -n \"$BUMPPO_VERSION\" && rsync -av --exclude='*.mp4' build/ ../bumppo-ghpages/$BUMPPO_VERSION || echo $'\\n\\nЗадайте переменную окружения BUMPPO_VERSION\\n'",
     "serve": "lite-server -c lite-server.config.json",
     "test": "echo 'Error: no test specified' && exit 1",
     "watch": "npm-run-all --parallel live-rebuild serve"
