--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "debug": "^4.0.1",
     "jquery": "^3.3.1",
+    "jquery.initialize": "^1.3.0",
     "knockout": "^3.4.2",
     "page": "^1.10.2",
     "semantic-ui": "^2.4.0",
