--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint-all": "find src/ -name '*.js' | xargs eslint",
     "lint-watch": "find src/ -name '*.js' | entr -s 'clear; yarn run lint-all'",
     "live-rebuild": "rollup -c --watch",
-    "production": "test -n \"$BUMPPO_VERSION\" && BUMPPO_ENV=production rollup -c || echo $'\\n\\nЗадайте переменную окружения BUMPPO_VERSION\\n'",
-    "rsync": "test -n \"$BUMPPO_VERSION\" && rsync -av --exclude='*.mp4' build/ ../bumppo-ghpages/$BUMPPO_VERSION || echo $'\\n\\nЗадайте переменную окружения BUMPPO_VERSION\\n'",
+    "showreel": "test -n \"$BUMPPO_VERSION\" && { BUMPPO_ENV=production BUMPPO_HOSTING=1 rollup -c; git --work-tree=../bumppo-ghpages --git-dir=../bumppo-ghpages/.git checkout gh-pages; rsync -av --exclude='*.mp4' build/ ../bumppo-ghpages/$BUMPPO_VERSION; } || echo $'\\n\\nЗадайте переменную окружения BUMPPO_VERSION\\n'",
+    "production": "BUMPPO_ENV=production rollup -c; git --work-tree=../bumppo-ghpages --git-dir=../bumppo-ghpages/.git checkout build; rsync -av --delete --exclude=.git --exclude='*.mp4' build/ ../bumppo-ghpages/",
     "serve": "lite-server -c lite-server.config.json",
     "test": "echo 'Error: no test specified' && exit 1",
     "watch": "npm-run-all --parallel live-rebuild serve"
