Добавлены новые свойства, у большинства старых значения приведены
в соответствие с реальными значениями в слоях ELAN.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,7 +15,7 @@ rules:
         var: 2
         let: 2
         const: 3
-      ArrayExpression: first
+      ArrayExpression: off
   linebreak-style:
     - error
     - unix
