--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Bumppo",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "Search UI for the Multichannel Discourse Project",
   "main": "build/js/spa.js",
   "license": "CC0-1.0",
@@ -22,12 +22,10 @@
     "jquery": "^3.3.1",
     "jquery.initialize": "^1.3.0",
     "knockout": "^3.4.2",
-    "page": "^1.10.2",
+    "page": "^1.11.3",
+    "plyr": "^3.4.7",
     "semantic-ui": "^2.4.2",
-    "svg.js": "^2.6.6",
-    "video.js": "^7.2.3",
-    "videojs-markers": "^1.0.1",
-    "videojs-youtube": "^2.6.0"
+    "svg.js": "^2.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
