--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Bumppo",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "description": "Search UI for the Multichannel Discourse Project",
   "main": "build/js/spa.js",
   "license": "CC0-1.0",
@@ -11,8 +11,8 @@
     "lint-all": "find src/ -name '*.js' | xargs eslint",
     "lint-watch": "find src/ -name '*.js' | entr -s 'clear; yarn run lint-all'",
     "live-rebuild": "rollup -c --watch",
-    "showreel": "test -n \"$BUMPPO_VERSION\" && { gulp -f semantic/gulpfile.js build; BUMPPO_ENV=production BUMPPO_HOSTING=1 rollup -c; git --work-tree=../bumppo-ghpages --git-dir=../bumppo-ghpages/.git checkout gh-pages; rsync -av --exclude='*.mp4' build/ ../bumppo-ghpages/$BUMPPO_VERSION; } || echo $'\\n\\nЗадайте переменную окружения BUMPPO_VERSION\\n'",
-    "production": "rm -fr build; gulp -f semantic/gulpfile.js build; rollup -c --environment BUMPPO_ENV:production",
+    "showreel": "test -n \"$BUMPPO_SHOWREEL\" && BUMPPO_ENV=production rollup -c || echo $'\\n\\nЗадайте переменную окружения BUMPPO_SHOWREEL\\n'",
+    "production": "rollup -c --environment BUMPPO_ENV:production,BUMPPO_SHOWREEL:false",
     "serve": "lite-server -c lite-server.config.json",
     "test": "echo 'Error: no test specified' && exit 1",
     "watch": "npm-run-all --parallel live-rebuild serve"
