--- a/package.json
+++ b/package.json
@@ -1,51 +1,60 @@
 {
   "name": "Bumppo",
-  "version": "0.8.42",
+  "version": "0.8.43",
   "description": "Search UI for the Multichannel Discourse Project",
   "main": "build/js/spa.js",
   "license": "CC0-1.0",
   "private": false,
   "scripts": {
-    "build": "rollup -c",
-    "build-watch": "rollup -c --watch",
+    "build": "gulp",
     "lint": "eslint",
     "lint-all": "clear; find src/ -name '*.js' | xargs eslint",
-    "production": "rm -fr build; gulp -f semantic/gulpfile.js build; rollup -c --environment BUMPPO_ENV:production,BUMPPO_SHOWREEL:false",
+    "production": "rm -fr build .build; gulp -f semantic/gulpfile.js build; BUMPPO_ENV=production gulp",
     "serve": "lite-server -c lite-server.config.js",
-    "showreel": "test -n \"$BUMPPO_SHOWREEL\" && { rm -fr build; gulp -f semantic/gulpfile.js build; rollup -c --environment BUMPPO_ENV:production; git --work-tree=../bumppo-ghpages --git-dir=../bumppo-ghpages/.git checkout gh-pages; rsync -av build/ ../bumppo-ghpages/$BUMPPO_SHOWREEL; } || echo $'\\n\\nЗадайте переменную окружения BUMPPO_SHOWREEL\\n'",
     "test": "echo 'Error: no test specified' && exit 1",
-    "watch": "find -type f -path './src/*' -o -path './package.json' -o -path './rollup.config.js' | entr -s 'npm-run-all --silent --parallel lint-all build'"
+    "watch": "find -type f -path './src/*' -o -path './package.json' -o -path './gulpfile.js' | entr -s 'npm-run-all --silent --parallel lint-all build'"
   },
   "dependencies": {
     "debug": "^4.1.0",
+    "fomantic-ui": "^2.7.5",
     "jquery": "^3.3.1",
     "jquery.initialize": "^1.3.0",
     "knockout": "^3.5.0",
     "plyr": "^3.4.7",
-    "semantic-ui": "^2.4.2",
     "svg.js": "^2.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "cssnano": "^4.1.7",
-    "gulp-cli": "^2.2.0",
+    "cssnano": "^4.1.10",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-better-rollup": "^4.0.1",
+    "gulp-eslint": "^5.0.0",
+    "gulp-ext": "^1.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-nunjucks": "^4.0.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-terser": "^1.1.7",
     "http-proxy-middleware": "^0.19.1",
     "lite-server": "^2.4.0",
+    "postcss-calc": "^7.0.1",
+    "postcss-css-variables": "^0.12.0",
     "postcss-cssnext": "^3.1.0",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-inline": "^1.2.0",
-    "postcss-nested": "^4.1.0",
+    "postcss-mixins": "^6.2.1",
+    "postcss-nested": "^4.1.2",
+    "postcss-preset-env": "^6.6.0",
     "postcss-simple-vars": "^5.0.1",
-    "rollup": "^0.67.4",
-    "rollup-plugin-babel": "^4.1.0",
+    "rollup": "^1.12.1",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-copy": "^0.2.3",
-    "rollup-plugin-eslint": "^5.0.0",
+    "rollup-plugin-jscc": "^1.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-postcss": "^1.6.3",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-terser": "^3.0.0",
     "yarn-run-all": "^3.1.1"
   }
 }
