--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "build": "gulp",
     "lint": "eslint",
     "lint-all": "clear; find src/ -name '*.js' | xargs eslint",
-    "production": "rm -fr build .build; gulp -f semantic/gulpfile.js build; BUMPPO_ENV=production gulp",
+    "production": "rm -fr build .build; BUMPPO_ENV=production gulp",
     "serve": "lite-server -c lite-server.config.js",
     "test": "echo 'Error: no test specified' && exit 1",
     "watch": "find -type f -path './src/*' -o -path './package.json' -o -path './gulpfile.js' | entr -s 'npm-run-all --silent --parallel lint-all build'"
   },
   "dependencies": {
     "debug": "^4.1.0",
-    "fomantic-ui": "^2.7.5",
     "jquery": "^3.3.1",
     "jquery.initialize": "^1.3.0",
     "knockout": "^3.5.0",
