--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Bumppo",
-  "version": "0.9.5",
+  "version": "0.9.7",
   "description": "Search UI for the Multichannel Discourse Project",
   "main": "build/js/spa.js",
   "license": "CC0-1.0",
@@ -15,6 +15,7 @@
     "watch": "find -type f -path './src/*' -o -path './package.json' -o -path './gulpfile.js' -o -path './lite-server.config.js' | entr -s 'npm-run-all --silent --parallel lint-all build'"
   },
   "dependencies": {
+    "dashjs": "^2.9.3",
     "debug": "^4.1.0",
     "jquery": "^3.3.1",
     "jquery.initialize": "^1.3.0",
