--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Bumppo",
-  "version": "0.11.5",
+  "version": "0.11.6",
   "description": "Search UI for the Multichannel Discourse Project",
   "main": "build/js/spa.js",
   "license": "CC0-1.0",
@@ -53,6 +53,7 @@
     "rollup": "^1.20.2",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-jscc": "^1.0.0",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.0.0",
     "yarn-run-all": "^3.1.1"
