--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,7 +5,7 @@ globals:
   ENV: true
 extends: 'eslint:recommended'
 parserOptions:
-  ecmaVersion: 2018
+  ecmaVersion: 2020
   sourceType: module
 rules:
   indent:
@@ -25,3 +25,11 @@ rules:
   semi:
     - error
     - always
+overrides:
+  - files: src/worker.js
+    env:
+      worker: true
+  - files: gulpfile.js
+    env:
+      browser: false
+      node: true
