--- a/now.json
+++ b/now.json
@@ -2,6 +2,7 @@
     "name": "bumppo",
     "scope": "multidiscourse",
     "version": 2,
+    "alias": ["bumppo"],
     "builds": [
       { "src": "build/**", "use": "@now/static" }
     ],
